# Secure-Group-Chat-AAU

./: README.md  To-Do.txt  pyproject.toml
Client/: pyproject.toml
Client/src/client/: app.py  client.py  connection.py  data_structs.py  main.py  routes.py
Client/src/client/modules/: data_structs.py
Client/src/client/static/: script.js  style.css
Client/src/client/templates/: index.html
Common/: pyproject.toml
Common/src/common/: config.py  json_pcks.py  json_wrapping_unwrapping.py  network_utils.py  utils.py
Common/src/common/rachet_modules/: _client.py  crypto.py  crypto_engine.py  node.py  rachet_pcks.py  rachet_tree.py
Server/: pyproject.toml
Server/src/server/: connection.py  group.py  main.py  server.py
Tests/: pyproject.toml
Tests/src/tests/: test_rachet_tree.py
demo_project/: HTML-login.html  HTML.html  MLS_Tree.py  add_people.html  add_people1.html  rachet_tree.py  tree_structure.py
demo_project/Client Server Test/: client.py  server.py
demo_project/Client Server Test/templates/: index.html  script.js
demo_project/Crypt/: 1to1.py  crypt.py
demo_project/TreeKEM/: _client.py  delivery_service.py  nodes.py  rachet_tree.py  run.py  tree_structure.py  util.py
demo_project/TreeKEM/gone/: rachet_tree.py
demo_project/UI/: chat.html  login.html  style.css
demo_project/UI/Old/: chat.py  login.py
demo_project/UI/Old/Templates/: chat.html  chat.json  login.html
demo_project/UI/Templates/: add_people1.html  chat.html  login.html
demo_project/UI/nyeste/: chat.py
demo_project/UI/static/: style.css
(+8 files in other folders)
