[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "client"
version = "2025.0.1"
requires-python = ">=3.13"
dependencies = [
    "aioconsole>=0.8.2",
    "common",
]

[project.scripts]
client = "client.main:main"

[tool.uv.sources]
common = { workspace = true }
