[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "client"
version = "2025.0.1"
requires-python = ">=3.13"
dependencies = ["common", "cryptography>=46.0.5", "flask>=3.1.3"]

[project.scripts]
client = "client.main:main"
webserver = "client.app:main"

[tool.uv.sources]
common = { workspace = true }
