[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "tests"
version = "2025.0.1"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
test-rachet = "tests.test_rachet_tree:main"

[tool.uv.sources]
common = { workspace = true }
server = { workspace = true }
client = { workspace = true }
